# bionics

./: .env.example  .gitignore  AADAP_Master_Blueprint.md  ARCHITECTURE.md  CODE CONTEXT.md  DATA_AND_STATE.md  DESIGN_SYSTEM.md  IMPLEMENTATION_PLAN.md  INTERACTION_FLOWS.md  PHASE_1_CONTRACTS.md  PHASE_2_CONTRACTS.md  PHASE_3_CONTRACTS.md  PHASE_4_CONTRACTS.md  PHASE_5_CONTRACTS.md  PHASE_6_5_UI_DESIGN_CONTRACTS.md  PHASE_6_CONTRACTS.md  PHASE_7_1_CONTRACTS.md  PHASE_7_2_CONTRACTS.md  PHASE_7_3_CONTRACTS.md  PHASE_7_4_CONTRACTS.md  PHASE_7_CONTRACTS.md  PHASE_PLAN.md  PROJECT_CHECKLIST.md  SAMPLE_TASKS.md  SYSTEM_CONSTITUTION.md  UI_IMPLEMENTATION_PLAN.md  UI_PAGE_LAYOUTS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  monaco-editor-fix-SUMMARY.md
aadap/: __init__.py  main.py
aadap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alembic/: env.py
frontend/: .cta.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: sample_fabric_tasks.py  sample_tasks.py  test_databricks_connection.py
tests/: conftest.py  test_agent_base.py  test_agent_health.py  test_api_approvals.py  test_api_artifacts.py  test_api_tasks.py  test_approval_engine.py  test_archival.py  test_catalog_agent.py  test_checkpoints.py  test_databricks_client.py  test_developer_agent.py  test_embeddings.py  test_etl_pipeline_agent.py  test_events.py  test_execution_service.py  test_fabric_agent.py  test_fabric_client.py  test_fabric_e2e.py  test_fabric_prompts.py  (+28 more)
(+213 files in other folders)
